registration process day2